--- a/ntex-rt/Cargo.toml
+++ b/ntex-rt/Cargo.toml
@@ -25,7 +25,9 @@ tokio = ["tok-io", "ntex-io/tokio"]
 ntex-bytes = "0.1.7"
 ntex-io = "0.1.0"
 ntex-util = "0.1.2"
+async-oneshot = "0.5.0"
+async-channel = "1.6.1"
 log = "0.4"
 pin-project-lite = "0.2"
 
-tok-io = { version = "1", package = "tokio", default-features = false, features = ["rt", "signal", "sync"], optional = true }
+tok-io = { version = "1", package = "tokio", default-features = false, features = ["rt", "net", "signal"], optional = true }
