--- a/ntex-util/Cargo.toml
+++ b/ntex-util/Cargo.toml
@@ -26,6 +26,6 @@ pin-project-lite = "0.2.6"
 
 [dev-dependencies]
 ntex = "0.5.0-b.0"
-ntex-rt = "0.3.2"
+ntex-rt = "0.4.0-b.0"
 ntex-macros = "0.1.3"
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
