--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -21,7 +21,7 @@ name = "ntex"
 path = "src/lib.rs"
 
 [features]
-default = ["http-framework"]
+default = []
 
 # openssl
 openssl = ["tls-openssl", "ntex-tls/openssl"]
@@ -38,10 +38,6 @@ cookie = ["coo-kie", "coo-kie/percent-encode"]
 # url support
 url = ["url-pkg"]
 
-# enable http/web support
-http-framework = ["h2", "http", "httparse",
-    "httpdate", "encoding_rs", "mime", "percent-encoding", "serde_json", "serde_urlencoded"]
-
 [dependencies]
 ntex-codec = "0.6.0"
 ntex-router = "0.5.1"
@@ -49,9 +45,8 @@ ntex-service = "0.2.1"
 ntex-macros = "0.1.3"
 ntex-util = "0.1.2"
 ntex-bytes = "0.1.7"
-ntex-io = "0.1"
 ntex-tls = "0.1"
-
+ntex-io = { version = "0.1", features = ["tokio"] }
 ntex-rt = { version = "0.4.0-b.0", default-features = false, features = ["tokio"] }
 
 base64 = "0.13"
@@ -75,15 +70,15 @@ async-oneshot = "0.5.0"
 async-channel = "1.6.1"
 
 # http/web framework
-h2 = { version = "0.3.9", optional = true }
-http = { version = "0.2", optional = true }
-httparse = { version = "1.5.1", optional = true }
-httpdate = { version = "1.0", optional = true }
-encoding_rs = { version = "0.8", optional = true }
-mime = { version = "0.3", optional = true }
-percent-encoding = { version = "2.1", optional = true }
-serde_json = { version = "1.0", optional = true }
-serde_urlencoded = { version = "0.7", optional = true }
+h2 = "0.3.9"
+http = "0.2"
+httparse = "1.5.1"
+httpdate = "1.0"
+encoding_rs = "0.8"
+mime = "0.3"
+percent-encoding = "2.1"
+serde_json = "1.0"
+serde_urlencoded = "0.7"
 url-pkg = { version = "2.1", package = "url", optional = true }
 coo-kie = { version = "0.15", package = "cookie", optional = true }
 
