--- a/ntex-io/Cargo.toml
+++ b/ntex-io/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-io"
-version = "0.1.0"
+version = "0.1.0-b.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
@@ -28,8 +28,8 @@ tokio = ["tok-io/net"]
 bitflags = "1.3"
 fxhash = "0.2.1"
 ntex-codec = "0.6.0"
-ntex-bytes = "0.1.7"
-ntex-util = "0.1.2"
+ntex-bytes = "0.1.8"
+ntex-util = "0.1.3"
 ntex-service = "0.2.1"
 log = "0.4"
 pin-project-lite = "0.2"
