--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -43,10 +43,10 @@ ntex-codec = "0.6.0"
 ntex-router = "0.5.1"
 ntex-service = "0.2.1"
 ntex-macros = "0.1.3"
-ntex-util = "0.1.2"
-ntex-bytes = "0.1.7"
+ntex-util = "0.1.3"
+ntex-bytes = "0.1.8"
 ntex-tls = "0.1"
-ntex-io = { version = "0.1", features = ["tokio"] }
+ntex-io = { version = "0.1.0-b.0", features = ["tokio"] }
 ntex-rt = { version = "0.4.0-b.0", default-features = false, features = ["tokio"] }
 
 base64 = "0.13"
