--- a/ntex-io/Cargo.toml
+++ b/ntex-io/Cargo.toml
@@ -19,22 +19,22 @@ path = "src/lib.rs"
 default = ["tokio"]
 
 # tokio traits support
-tokio-traits = ["tok-io/net"]
+tokio-traits = ["tok-io/net", "tok-io/rt"]
 
 # tokio runtime support
-tokio = ["tok-io/net"]
+tokio = ["tok-io/net", "tok-io/rt"]
 
 [dependencies]
 bitflags = "1.3"
-fxhash = "0.2.1"
 ntex-codec = "0.6.0"
 ntex-bytes = "0.1.8"
 ntex-util = "0.1.3"
 ntex-service = "0.2.1"
+fxhash = "0.2.1"
 log = "0.4"
 pin-project-lite = "0.2"
 
-tok-io = { version = "1", package = "tokio", default-features = false, features = ["net", "rt"], optional = true }
+tok-io = { version = "1", package = "tokio", default-features = false, optional = true }
 
 [dev-dependencies]
 ntex = "0.5.0-b.0"
