--- a/ntex-rt/Cargo.toml
+++ b/ntex-rt/Cargo.toml
@@ -22,9 +22,9 @@ default = ["tokio"]
 tokio = ["tok-io", "ntex-io/tokio"]
 
 [dependencies]
-ntex-bytes = "0.1.7"
-ntex-io = "0.1.0"
-ntex-util = "0.1.2"
+ntex-bytes = "0.1.8"
+ntex-io = "0.1.0-b.0"
+ntex-util = "0.1.3"
 async-oneshot = "0.5.0"
 async-channel = "1.6.1"
 log = "0.4"
