--- a/ntex-tls/Cargo.toml
+++ b/ntex-tls/Cargo.toml
@@ -25,9 +25,9 @@ openssl = ["tls_openssl"]
 rustls = ["tls_rust", "webpki-roots"]
 
 [dependencies]
-ntex-bytes = "0.1.7"
-ntex-io = "0.1.0"
-ntex-util = "0.1.2"
+ntex-bytes = "0.1.8"
+ntex-io = "0.1.0-b.0"
+ntex-util = "0.1.3"
 ntex-service = "0.2.1"
 pin-project-lite = "0.2"
 
