--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.5.0-b.0"
+version = "0.5.0-b.1"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -45,8 +45,8 @@ ntex-service = "0.2.1"
 ntex-macros = "0.1.3"
 ntex-util = "0.1.3"
 ntex-bytes = "0.1.8"
-ntex-tls = "0.1.0-b.0"
-ntex-io = "0.1.0-b.1"
+ntex-tls = "=0.1.0-b.1"
+ntex-io = "=0.1.0-b.2"
 ntex-rt = { version = "0.4.0-b.0", default-features = false, features = ["tokio"] }
 
 base64 = "0.13"
