--- a/ntex-io/Cargo.toml
+++ b/ntex-io/Cargo.toml
@@ -25,11 +25,12 @@ tokio-traits = ["tok-io/net", "tok-io/rt"]
 tokio = ["tok-io/net", "tok-io/rt"]
 
 [dependencies]
-bitflags = "1.3"
 ntex-codec = "0.6.0"
 ntex-bytes = "0.1.8"
 ntex-util = "0.1.4"
-ntex-service = "0.3.0"
+ntex-service = "0.3.0-b.0"
+
+bitflags = "1.3"
 fxhash = "0.2.1"
 log = "0.4"
 pin-project-lite = "0.2"
