--- a/ntex-tls/Cargo.toml
+++ b/ntex-tls/Cargo.toml
@@ -26,9 +26,9 @@ rustls = ["tls_rust"]
 
 [dependencies]
 ntex-bytes = "0.1.8"
-ntex-io = "0.1.0-b.3"
-ntex-util = "0.1.3"
-ntex-service = "0.3.0"
+ntex-io = "0.1.0-b.5"
+ntex-util = "0.1.4"
+ntex-service = "0.3.0-b.0"
 pin-project-lite = "0.2"
 
 # openssl
