--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -41,13 +41,13 @@ url = ["url-pkg"]
 [dependencies]
 ntex-codec = "0.6.0"
 ntex-router = "0.5.1"
-ntex-service = "0.3.0"
+ntex-service = "0.3.0-b.0"
 ntex-macros = "0.1.3"
 ntex-util = "0.1.4"
 ntex-bytes = "0.1.8"
-ntex-tls = "0.1.0-b.2"
+ntex-tls = "0.1.0-b.3"
 ntex-io = "0.1.0-b.5"
-ntex-rt = { version = "0.4.0-b.1", default-features = false, features = ["tokio"] }
+ntex-rt = { version = "0.4.0-b.2", default-features = false, features = ["tokio"] }
 
 base64 = "0.13"
 bitflags = "1.3"
