--- a/ntex-io/Cargo.toml
+++ b/ntex-io/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-io"
-version = "0.1.0-b.10"
+version = "0.1.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
@@ -31,7 +31,7 @@ async-std = ["async_std/unstable"]
 ntex-codec = "0.6.0"
 ntex-bytes = "0.1.8"
 ntex-util = "0.1.5"
-ntex-service = "0.3.0-b.0"
+ntex-service = "0.3.0"
 
 bitflags = "1.3"
 fxhash = "0.2.1"
@@ -42,6 +42,6 @@ tok-io = { version = "1", package = "tokio", default-features = false, optional 
 async_std = { version = "1", package = "async-std", optional = true }
 
 [dev-dependencies]
-ntex = "0.5.0-b.5"
+ntex = "0.5.0"
 rand = "0.8"
 env_logger = "0.9"
