--- a/ntex-rt/Cargo.toml
+++ b/ntex-rt/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-rt"
-version = "0.4.0-b.3"
+version = "0.4.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "ntex runtime"
 keywords = ["network", "framework", "async", "futures"]
@@ -26,8 +26,8 @@ async-std = ["ntex-io/async-std", "async_std/unstable"]
 
 [dependencies]
 ntex-bytes = "0.1.8"
-ntex-io = "0.1.0-b.9"
-ntex-util = "0.1.3"
+ntex-io = "0.1.0"
+ntex-util = "0.1.4"
 async-oneshot = "0.5.0"
 async-channel = "1.6.1"
 derive_more = "0.99.14"
