--- a/ntex-service/Cargo.toml
+++ b/ntex-service/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-service"
-version = "0.3.0-b.0"
+version = "0.3.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "ntex service"
 keywords = ["network", "framework", "async", "futures"]
@@ -16,8 +16,8 @@ name = "ntex_service"
 path = "src/lib.rs"
 
 [dependencies]
-ntex-util = "0.1.4"
+ntex-util = "0.1.5"
 pin-project-lite = "0.2.6"
 
 [dev-dependencies]
-ntex = "0.5.0-b.0"
+ntex = "0.5.0"
