--- a/ntex-tls/Cargo.toml
+++ b/ntex-tls/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-tls"
-version = "0.1.0-b.7"
+version = "0.1.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "An implementation of SSL streams for ntex backed by OpenSSL"
 keywords = ["network", "framework", "async", "futures"]
@@ -28,7 +28,7 @@ rustls = ["tls_rust"]
 ntex-bytes = "0.1.8"
 ntex-io = "0.1.0-b.10"
 ntex-util = "0.1.5"
-ntex-service = "0.3.0-b.0"
+ntex-service = "0.3.0"
 pin-project-lite = "0.2"
 
 # openssl
@@ -38,7 +38,7 @@ tls_openssl = { version="0.10", package = "openssl", optional = true }
 tls_rust = { version = "0.20", package = "rustls", optional = true }
 
 [dev-dependencies]
-ntex = { version = "0.5.0-b.0", features = ["openssl", "rustls"] }
+ntex = { version = "0.5.0", features = ["openssl", "rustls"] }
 log = "0.4"
 env_logger = "0.9"
 rustls-pemfile = { version = "0.2" }
