--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.5.0-b.7"
+version = "0.5.0"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -47,13 +47,13 @@ async-std = ["ntex-rt/async-std"]
 [dependencies]
 ntex-codec = "0.6.0"
 ntex-router = "0.5.1"
-ntex-service = "0.3.0-b.0"
+ntex-service = "0.3.0"
 ntex-macros = "0.1.3"
 ntex-util = "0.1.5"
 ntex-bytes = "0.1.8"
-ntex-tls = "0.1.0-b.7"
-ntex-rt = "0.4.0-b.3"
-ntex-io = { version = "0.1.0-b.10", features = ["tokio-traits"] }
+ntex-tls = "0.1.0"
+ntex-rt = "0.4.0"
+ntex-io = { version = "0.1.0", features = ["tokio-traits"] }
 
 base64 = "0.13"
 bitflags = "1.3"
