--- a/ntex-tls/Cargo.toml
+++ b/ntex-tls/Cargo.toml
@@ -26,7 +26,7 @@ rustls = ["tls_rust"]
 
 [dependencies]
 ntex-bytes = "0.1.8"
-ntex-io = "0.1.0-b.10"
+ntex-io = "0.1.0"
 ntex-util = "0.1.5"
 ntex-service = "0.3.0"
 pin-project-lite = "0.2"
