--- a/ntex-util/Cargo.toml
+++ b/ntex-util/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/lib.rs"
 
 [dependencies]
 ntex-rt = "0.4.1"
+ntex-service = "0.3.1"
 bitflags = "1.3"
 fxhash = "0.2.1"
 log = "0.4"
@@ -28,6 +29,7 @@ pin-project-lite = "0.2.6"
 
 [dev-dependencies]
 ntex = "0.5.4"
-ntex-rt = "0.4.1"
+ntex-bytes = "0.1.8"
 ntex-macros = "0.1.3"
+derive_more = "0.99"
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
