--- a/ntex-util/Cargo.toml
+++ b/ntex-util/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-util"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Utilities for ntex framework"
 keywords = ["network", "framework", "async", "futures"]
@@ -28,7 +28,7 @@ futures-sink = { version = "0.3", default-features = false, features = ["alloc"]
 pin-project-lite = "0.2.6"
 
 [dev-dependencies]
-ntex = "0.5.4"
+ntex = { version = "0.5.6", features = ["tokio"] }
 ntex-bytes = "0.1.8"
 ntex-macros = "0.1.3"
 derive_more = "0.99"
