--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.5.7"
+version = "0.5.8"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -49,19 +49,17 @@ ntex-codec = "0.6.0"
 ntex-router = "0.5.1"
 ntex-service = "0.3.1"
 ntex-macros = "0.1.3"
-ntex-util = "0.1.7"
+ntex-util = "0.1.8"
 ntex-bytes = "0.1.8"
-ntex-tls = "0.1.0"
+ntex-tls = "0.1.1"
 ntex-rt = "0.4.1"
-ntex-io = "0.1.1"
+ntex-io = "0.1.2"
 ntex-tokio = "0.1.0"
 ntex-async-std = { version = "0.1.0", optional = true }
 
 base64 = "0.13"
 bitflags = "1.3"
 derive_more = "0.99"
-futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
-futures-sink = { version = "0.3", default-features = false, features = ["alloc"] }
 log = "0.4"
 num_cpus = "1.13"
 nanorand = { version = "0.6.1", default-features = false, features = ["std", "wyrand"] }
@@ -104,7 +102,7 @@ flate2 = { version = "1.0.22", optional = true }
 env_logger = "0.9"
 rand = "0.8"
 time = "0.3"
-futures = "0.3"
+futures-util = "0.3"
 tls-openssl = { version="0.10", package = "openssl" }
 tls-rustls = { version = "0.20", package="rustls", features = ["dangerous_configuration"]  }
 rustls-pemfile = { version = "0.2" }
