--- a/ntex-macros/Cargo.toml
+++ b/ntex-macros/Cargo.toml
@@ -16,5 +16,6 @@ syn = { version = "^1", features = ["full", "parsing"] }
 proc-macro2 = "^1"
 
 [dev-dependencies]
-ntex = "0.5.0-b.0"
+ntex = { version = "0.5.0", features = ["tokio"] }
 futures = "0.3"
+env_logger = "0.9"
