--- a/ntex-bytes/Cargo.toml
+++ b/ntex-bytes/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex-bytes"
-version = "0.1.9"
+version = "0.1.10"
 license = "MIT"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Carl Lerche <me@carllerche.com>"]
 description = "Types and traits for working with bytes (bytes crate fork)"
@@ -27,4 +27,4 @@ simdutf8 = { version = "0.1.3", optional = true }
 [dev-dependencies]
 serde_test = "1.0"
 serde_json = "1.0"
-ntex = "0.5.0"
+ntex = { version = "0.5", features = ["tokio"] }
