--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ntex"
-version = "0.5.11"
+version = "0.5.12"
 authors = ["ntex contributors <team@ntex.rs>"]
 description = "Framework for composable network services"
 readme = "README.md"
@@ -61,9 +61,10 @@ ntex-tokio = "0.1.2"
 ntex-glommio = { version = "0.1.0", optional = true }
 ntex-async-std = { version = "0.1.0", optional = true }
 
+async-oneshot = "0.5.0"
+async-channel = "1.6.1"
 base64 = "0.13"
 bitflags = "1.3"
-derive_more = "0.99"
 log = "0.4"
 num_cpus = "1.13"
 nanorand = { version = "0.6.1", default-features = false, features = ["std", "wyrand"] }
@@ -74,9 +75,7 @@ sha-1 = "0.10"
 slab = "0.4"
 serde = { version = "1.0", features=["derive"] }
 socket2 = "0.4"
-
-async-oneshot = "0.5.0"
-async-channel = "1.6.1"
+thiserror = "1.0"
 
 # http/web framework
 h2 = "0.3.9"
