--- a/ntex-service/Cargo.toml
+++ b/ntex-service/Cargo.toml
@@ -19,5 +19,5 @@ path = "src/lib.rs"
 pin-project-lite = "0.2.6"
 
 [dev-dependencies]
-ntex = "0.5.0"
+ntex = { version = "0.5", features = ["tokio"] }
 ntex-util = "0.1.5"
