--- a/ntex-bytes/Cargo.toml
+++ b/ntex-bytes/Cargo.toml
@@ -5,7 +5,7 @@ license = "MIT"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Carl Lerche <me@carllerche.com>"]
 description = "Types and traits for working with bytes (bytes crate fork)"
 documentation = "https://docs.rs/ntex-bytes"
-repository = "https://github.com/ntex-rs/ntex-bytes"
+repository = "https://github.com/ntex-rs"
 readme = "README.md"
 keywords = ["buffers", "zero-copy", "io"]
 categories = ["network-programming", "data-structures"]
